<resources>
    <string name="app_name">NekoPaPa</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="nbnb">Nbnb</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="account">Account</string>
    <string name="error">Error</string>
    <string name="passwords_match_error_text">Passwords do not match.</string>
    <string name="try_again_text">Try Again</string>
    <string name="new_account">New Account</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear">Clear</string>
    <string name="create">Create</string>
    <string name="exit">Exit</string>

    <string name="cat_body">Cat Body</string>
    <string name="cat_ear">Cat Ear</string>
    <string name="img_button">Img Button</string>

    <string name="gold_panel_label">Gold</string>
    <string name="buy_energy_label">Replenish Energy 30 G</string>
    <string name="sell_cat_label">Sell Cat</string>
    <string name="goto_map_label">Map</string>
    <string name="cat_name_label">Name</string>
    <string name="energy_label">Energy</string>
    <string name="gauge">Gauge</string>
    <string name="mood_label">Mood</string>
    <string name="next_cat">Next</string>
    <string name="previous_cat">Previous</string>

    <string name="back_to_gamesession">Back</string>
</resources>
